# Cygni

./: .gitignore  CMakeLists.txt  Main.cpp
include/Expressions/: Expression.hpp  Namespace.hpp  SourceRange.hpp  TreeException.hpp  Type.hpp
include/FlintByteCode/: ByteCode.hpp
include/LexicalAnalysis/: Lexer.hpp  LexicalException.hpp  SourceCodeFile.hpp  Token.hpp
include/SyntaxAnalysis/: Parser.hpp  ParserException.hpp
include/Utility/: Convert.hpp  Exception.hpp  Format.hpp  HashPair.hpp  OrderPreservingMap.hpp  UTF32Functions.hpp
include/Visitors/: Compiler.hpp  ExpressionJsonSerializer.hpp  NameLocator.hpp  ScopException.hpp  Scope.hpp  ScopeException.hpp  TypeChecker.hpp  Visitor.hpp
libs/nlohmann/: json.hpp
src/: CMakeLists.txt
src/Expressions/: Namespace.cpp  Type.cpp
src/LexicalAnalysis/: Lexer.cpp  Token.cpp
src/SyntaxAnalysis/: Parser.cpp
src/Utility/: Convert.cpp  UTF32Functions.cpp
src/Visitors/: Compiler.cpp  ExpressionJsonSerializer.cpp  NameLocator.cpp  TypeChecker.cpp
tests/: CMakeLists.txt
tests/Expressions/: TestNamespace.cpp  TestType.cpp
tests/LexicalAnalysis/: TestLexer.cpp
tests/SyntaxAnalysis/: TestParser.cpp
tests/Visitors/: TestCompiler.cpp  TestNameLocator.cpp  TestTypeChecker.cpp
